Bugfix for teaser content alignment to the right

--- a/ui.frontend/src/main/webpack/components/teaser/style/overlay.css
+++ b/ui.frontend/src/main/webpack/components/teaser/style/overlay.css
@@ -26,7 +26,7 @@
         .cmp-teaser__action-link {
             @extend %button-primary;
         }
-        .\--teaser-right .cmp-teaser__content {
+        &.\--teaser-right .cmp-teaser__content {
             @apply items-end;
         }
     }
